整合depth-anything-v2, 并将其backbone和head分离

--- a/config/WDM3D.yaml
+++ b/config/WDM3D.yaml
@@ -3,9 +3,14 @@
 
 model:
     backbone:
-        module: "fastvit_t8"
+        module: "DINOv2"
         params:
-            fork_feat: True
+            model_name: "vits"
+
+    depther:
+        module: "DADepther"
+        params: {}
+
     
     neck: 
         base_neck:
