--- a/config/neck/neck.yaml
+++ b/config/neck/neck.yaml
@@ -13,13 +13,13 @@ base_neck: null
   #   num_feats: 256
   # num_points: 8
 pe_mask_neck:
-  in_channels: [16, 32, 64, 128, 256, 512]
+  in_channels: [64, 128, 256, 512]
   output_channel: 16
   kernel_size: 3
   padding: 1
   stride: 1
 dynamic_pe_neck:
-  in_channels: [16, 32, 64, 128, 256, 512]
+  in_channels: [64, 128, 256, 512]
   output_channel: 11
   kernel_size: 3
   padding: 1
