- 调试model forward - utils添加一个计算模型参数量的方法

--- a/config/model/WDM3D.yaml
+++ b/config/model/WDM3D.yaml
@@ -3,7 +3,7 @@
 
 model:
     backbone:
-        module: "fastvit_s12"
+        module: "fastvit_t12"
         params: 
             fork_feat: True
 
