--- a/config/exp/exp.yaml
+++ b/config/exp/exp.yaml
@@ -8,7 +8,7 @@ loss:
     module: "WDM3DLoss"
     params: 
         sample_roi_points: 100
-        dim_prior: 1
+        dim_prior: [[0.8, 1.8, 0.8], [0.6, 1.8, 1.8], [1.6, 1.8, 4.]]
         loss_weights: [1, 0.9, 0.9]     # 依次为loss_3d, depth_loss, bbox2d_loss的权重
         depth_loss:
             module: "MSELoss"
