- 引入优化器 - loss 中的calc_dis_ray_tracing有bug已调通，但有效性待验证

--- a/config/exp/exp.yaml
+++ b/config/exp/exp.yaml
@@ -17,3 +17,8 @@ loss:
         bbox2d_loss:
             module: "SmoothL1Loss"
             params: {}
+
+optimizer:
+    module: "Adam"
+    params:
+        lr: 0.01
