- 将使用何种格式的depth label提取为参数 - 用depth-anythingv2生成了全深度信息的标签

--- a/config/data/data.yaml
+++ b/config/data/data.yaml
@@ -3,6 +3,9 @@ dataset:
     params:
         root: "/home/qinguoqing/dataset/kitti"
         split: "train"
+
+        depth_mode: "pred"  # 深度图标签有三种["gt", "interp", "pred"]
+
         detect_classes: ["Car"]
         use_right_image: False
         max_objects: 40
