- 整合yolov9 loss - 增强create_module的功能 - TODO：debug yolov9 loss

--- a/config/exp/exp.yaml
+++ b/config/exp/exp.yaml
@@ -15,7 +15,7 @@ loss:
             module: "MSELoss"
             params: {}
         bbox2d_loss:
-            module: "SmoothL1Loss"
+            module: "ComputeLoss"
             params: {}
 
 optimizer:
