- 经过debug发现yolov9工作未达预期(见devlog)，尚在寻找原因 - model init中添加加载权重的代码

--- a/config/model/WDM3D.yaml
+++ b/config/model/WDM3D.yaml
@@ -2,6 +2,7 @@
 
 
 model:
+    # ckpt: "/home/qinguoqing/project/WDM3D/output/train/check_effect_DA2_SiLogLoss_loss_2024-12-12_15_26_25/model_sd.pth"
     backbone:
         module: "fastvit_t12"
         params: 
