--- a/config/data/data.yaml
+++ b/config/data/data.yaml
@@ -6,7 +6,7 @@ dataset:
 
         depth_mode: "pred"  # 深度图标签有三种["gt", "interp", "pred"]
 
-        detect_classes: ["Car"]
+        detect_classes: ["Car", "Pedestrian"]
         use_right_image: False
         max_objects: 40
         filter_anno_enable: True
