- 解决yolov9不能预测有效bbox的问题，问题在于stride - yolov9正常工作使得3d loss参与计算， 微调也使其正常工作

--- a/config/exp/exp.yaml
+++ b/config/exp/exp.yaml
@@ -9,13 +9,13 @@ loss:
     params: 
         sample_roi_points: 100
         dim_prior: [[0.8, 1.8, 0.8], [0.6, 1.8, 1.8], [1.6, 1.8, 4.]]
-        loss_weights: [1, 0.9, 0.9]     # 依次为loss_3d, depth_loss, bbox2d_loss的权重
+        loss_weights: [1, 0.9, 0.5]     # 依次为loss_3d, depth_loss, bbox2d_loss的权重
         inf_pixel_loss: 0.001
         depth_loss:
             module: "SiLogLoss"
             params: 
                 lambd: 0.5
-                epsilon: !!float 1e-5
+                epsilon: 0.01
         bbox2d_loss:
             module: "ComputeLoss"
             params: {}
