--- a/config/yolo/yolov9-t.yaml
+++ b/config/yolo/yolov9-t.yaml
@@ -1,7 +1,7 @@
 # YOLOv9
 
 # parameters
-nc: 2  # number of classes
+nc: 7  # number of classes, must >= class number of dataset
 depth_multiple: 1.0  # model depth multiple
 width_multiple: 1.0  # layer channel multiple
 #activation: nn.LeakyReLU(0.1)
