- 实现了加载yolov9的官方权重文件 - model创建的代码中添加了单独加载2d检测器权重的代码

--- a/config/data/data.yaml
+++ b/config/data/data.yaml
@@ -7,6 +7,7 @@ dataset:
         depth_mode: "pred"  # 深度图标签有三种["gt", "interp", "pred"]
 
         detect_classes: ["Car", "Pedestrian", "Van", "Truck", "Person_sitting", "Cyclist", "Tram"]
+        # detect_classes: ["Car"]
         use_right_image: False
         max_objects: 40
         filter_anno_enable: True
