--- a/config/model/WDM3D.yaml
+++ b/config/model/WDM3D.yaml
@@ -3,6 +3,9 @@
 
 model:
     # ckpt: "/home/qinguoqing/project/WDM3D/output/train/check_effect_DA2_SiLogLoss_loss_2024-12-12_15_26_25/model_sd.pth"
+    detector_2d_weight: "/home/qinguoqing/project/WDM3D/weight/yolov9-s-sd.pth"
+
+
     backbone:
         module: "fastvit_t12"
         params: 
@@ -29,9 +32,8 @@ model:
     detector_2d:
         module: "DetectionModel"
         params:
-            cfg: "/home/qinguoqing/project/WDM3D/config/yolo/yolov9-t.yaml"
+            cfg: "/home/qinguoqing/project/WDM3D/config/yolo/yolov9-s.yaml"
 
-    
 
     head:
         module: "WDM3DHead"
